Mon Oct 15 02:51:16 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (vm_call0_body): add new function.
	  `vm_call0()' makes call_info struct and calls `vm_call0_body()'
	  with this struct. In near future, `vm_call0()' will be removed
	  because all of `vm_call0()' users setup call_info struct by itself.

Mon Oct 15 01:38:06 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def (send, invokesuper, invokeblock, opt_*), vm_core.h:
	  use only a `ci' (rb_call_info_t) parameter instead of using
	  parameters such as `op_id', 'op_argc', `blockiseq' and flag.
	  These information are stored in rb_call_info_t at the compile
	  time.
	  This technique simplifies parameter passings at related
	  function calls (~10% speedups for simple mehtod invocation at
	  my machine).
	  `rb_call_info_t' also has new function pointer variable `call'.
	  This `call' variable enables to customize method (block)
	  invocation process for each place. However, it always call
	  `vm_call_general()' at this changes.
	  `rb_call_info_t' also has temporary variables for method
	  (block) invocation.

	* vm_core.h, compile.c, insns.def: introduce VM_CALL_ARGS_SKIP_SETUP
	  VM_CALL macro.  This flag indicates that this call can skip
	  caller_setup (block arg and splat arg).

	* compile.c: catch up above changes.

	* iseq.c: catch up above changes (especially for TS_CALLINFO).

	* tool/instruction.rb: catch up above chagnes.

	* vm_insnhelper.c, vm_insnhelper.h: ditto. Macros and functions
	  parameters are changed.

	* vm_eval.c (vm_call0): ditto (it will be rewriten soon).

Sun Oct 14 12:30:44 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (rb_f_sub, rb_f_gsub): pass the given block.
	  [ruby-core:47967] [Bug #7157]

Sat Oct 13 23:15:39 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* regparse.c (parse_char_class): should match with a hyphen after a
	  range in a character class.

	* test/ruby/test_regexp.rb (TestRegexp#test_char_class): fixed wrong
	  test.
