@@ -1,0 +1,7 @@
+i= 0.0; f = 0.0
+while i<30_000_000
+  i+= 1
+  f += 0.1; f -= 0.1
+  f += 0.1; f -= 0.1
+  f += 0.1; f -= 0.1
+end
